Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <a href="01-la-primera-expedicion-al-Polo-Norte.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="01-la-primera-expedicion-al-Polo-Norte.jpg" alt="01 La primera expedición al Polo Norte">
+              <img src="01-la-primera-expedicion-al-polo-norte.jpg" alt="01 La primera expedición al Polo Norte">
             </div>
             <figcaption>
               <p class="title">01 la primera expedición al Polo Norte</p>
@@ -123,10 +123,10 @@
       </li>
 
       <li class="card">
-        <a href="02-Encuentro-con-los-inuit.html">
+        <a href="02-encuentro-con-los-inuit.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="02-Encuentro-con-los-inuit.jpg" alt="02 Relato Encuentro con los inuit">
+              <img src="02-encuentro-con-los-inuit.jpg" alt="02 Relato Encuentro con los inuit">
             </div>
             <figcaption>
               <p class="title">02 Relato Encuentro con los inuit</p>
@@ -137,10 +137,10 @@
       </li>
 
       <li class="card">
-        <a href="03-Auroras-boreales.html">
+        <a href="03-auroras-boreales.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="03-Auroras-boreales.jpg" alt="03 Auroras boreales">
+              <img src="03-auroras-boreales.jpg" alt="03 Auroras boreales">
             </div>
             <figcaption>
               <p class="title">03 Auroras boreales</p>
@@ -151,10 +151,10 @@
       </li>
 
       <li class="card">
-        <a href="04-El-deshielo.html">
+        <a href="04-el-deshielo.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="04-El-deshielo.jpg" alt="04 El deshielo">
+              <img src="04-el-deshielo.jpg" alt="04 El deshielo">
             </div>
             <figcaption>
               <p class="title">04 El deshielo</p>
@@ -165,10 +165,10 @@
       </li>
 
       <li class="card">
-        <a href="05-Fauna-artica.html">
+        <a href="05-fauna-artica.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="05-Fauna-artica.jpg" alt="05 Fauna ártica">
+              <img src="05-fauna-artica.jpg" alt="05 Fauna ártica">
             </div>
             <figcaption>
               <p class="title">05 Fauna ártica</p>
@@ -179,10 +179,10 @@
       </li>
 
       <li class="card">
-        <a href="06-Tormentas-gelidas.html">
+        <a href="06-tormentas-gelidas.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="06-Tormentas-gelidas.jpg" alt="06 Tormentas gélidas">
+              <img src="06-tormentas-gelidas.jpg" alt="06 Tormentas gélidas">
             </div>
             <figcaption>
               <p class="title">06 Tormentas gélidas</p>
@@ -193,10 +193,10 @@
       </li>
 
       <li class="card">
-        <a href="07-Exploradores-legendarios.html">
+        <a href="07-exploradores-legendarios.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="07-Exploradores-legendarios.jpg" alt="07 Exploradores legendarios">
+              <img src="07-exploradores-legendarios.jpg" alt="07 Exploradores legendarios">
             </div>
             <figcaption>
               <p class="title">07 Exploradores legendarios</p>
@@ -207,10 +207,10 @@
       </li>
 
       <li class="card">
-        <a href="08-Vida-en-un-rompehielos.html">
+        <a href="08-vida-en-un-rompehielos.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="08-Vida-en-un-rompehielos.jpg" alt="08 Vida en un rompehielos">
+              <img src="08-vida-en-un-rompehielos.jpg" alt="08 Vida en un rompehielos">
             </div>
             <figcaption>
               <p class="title">08 Vida en un rompehielos</p>
@@ -221,10 +221,10 @@
       </li>
 
       <li class="card">
-        <a href="09-Islas-del-Artico.html">
+        <a href="09-islas-del-artico.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="09-Islas-del-Artico.jpg" alt="09 Islas del Ártico">
+              <img src="09-islas-del-artico.jpg" alt="09 Islas del Ártico">
             </div>
             <figcaption>
               <p class="title">09 Islas del Ártico</p>
@@ -235,10 +235,10 @@
       </li>
 
       <li class="card">
-        <a href="10-La-soledad-blanca.html">
+        <a href="10-la-soledad-blanca.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="10-La-soledad-blanca.jpg" alt="10 La soledad blanca">
+              <img src="10-la-soledad-blanca.jpg" alt="10 La soledad blanca">
             </div>
             <figcaption>
               <p class="title">10 La soledad blanca</p>
@@ -249,10 +249,10 @@
       </li>
 
       <li class="card">
-        <a href="11-Cientificos-en-el-hielo.html">
+        <a href="11-cientificos-en-el-hielo.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="11-Cientificos-en-el-hielo.jpg" alt="11 Científicos en el hielo">
+              <img src="11-cientificos-en-el-hielo.jpg" alt="11 Científicos en el hielo">
             </div>
             <figcaption>
               <p class="title">11 Científicos en el hielo</p>
@@ -263,10 +263,10 @@
       </li>
 
       <li class="card">
-        <a href="12-El-misterio-del-Sol-de-medianoche.html">
+        <a href="12-el-misterio-del-sol-de-medianoche.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="12-El-misterio-del-Sol-de-medianoche.jpg" alt="12 El misterio del Sol de medianoche">
+              <img src="12-el-misterio-del-sol-de-medianoche.jpg" alt="12 El misterio del Sol de medianoche">
             </div>
             <figcaption>
               <p class="title">12 El misterio del Sol de medianoche</p>
@@ -277,7 +277,7 @@
       </li>
 
       <li class="card">
-        <a href="13-Sobrevivir-al-frio-extremo.html">
+        <a href="13-sobrevivir-al-frio-extremo.html">
           <figure style="margin:0">
             <div class="thumb">
               <img src="13-Sobrevivir-al-frio-extremo.jpg" alt="13 Sobrevivir al frío extremo">
@@ -291,10 +291,10 @@
       </li>
 
       <li class="card">
-        <a href="14-Hielo-eterno.html">
+        <a href="14-hielo-eterno.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="14-Hielo-eterno.jpg" alt="14 Hielo eterno">
+              <img src="14-hielo-eterno.jpg" alt="14 Hielo eterno">
             </div>
             <figcaption>
               <p class="title">14 Hielo eterno</p>
@@ -305,10 +305,10 @@
       </li>
 
       <li class="card">
-        <a href="15-Leyendas-del-Artico.html">
+        <a href="15-leyendas-del-artico.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="15-Leyendas-del-Artico.jpg" alt="15 Leyendas del Ártico">
+              <img src="15-leyendas-del-artico.jpg" alt="15 Leyendas del Ártico">
             </div>
             <figcaption>
               <p class="title">15 Leyendas del Ártico</p>
@@ -319,10 +319,10 @@
       </li>
 
       <li class="card">
-        <a href="16-La-caza-del-hielo-azul.html">
+        <a href="16-la-caza-del-hielo-azul.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="16-La-caza-del-hielo-azul.jpg" alt="16 La caza del hielo azul">
+              <img src="16-la-caza-del-hielo-azul.jpg" alt="16 La caza del hielo azul">
             </div>
             <figcaption>
               <p class="title">16 La caza del hielo azul</p>
@@ -333,10 +333,10 @@
       </li>
 
       <li class="card">
-        <a href="17-Rutas-inexploradas.html">
+        <a href="17-rutas-inexploradas.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="17-Rutas-inexploradas.jpg" alt="17 Rutas inexploradas">
+              <img src="17-rutas-inexploradas.jpg" alt="17 Rutas inexploradas">
             </div>
             <figcaption>
               <p class="title">17 Rutas inexploradas</p>
@@ -347,10 +347,10 @@
       </li>
 
       <li class="card">
-        <a href="18-El-impacto-humano.html">
+        <a href="18-el-impacto-humano.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="18-El-impacto-humano.jpg" alt="18 El impacto humano">
+              <img src="18-el-impacto-humano.jpg" alt="18 El impacto humano">
             </div>
             <figcaption>
               <p class="title">18 El impacto humano</p>
@@ -361,10 +361,10 @@
       </li>
 
       <li class="card">
-        <a href="19-Viajes-en-trineos-de-perros.html">
+        <a href="19-viajes-en-trineos-de-perros.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="19-Viajes-en-trineos-de-perros.jpg" alt="19 Viajes en trineos de perros">
+              <img src="19-viajes-en-trineos-de-perros.jpg" alt="19 Viajes en trineos de perros">
             </div>
             <figcaption>
               <p class="title">19 Viajes en trineos de perros</p>
@@ -375,10 +375,10 @@
       </li>
 
       <li class="card">
-        <a href="20-Regreso-al-hogar.html">
+        <a href="20-regreso-al-hogar.html">
           <figure style="margin:0">
             <div class="thumb">
-              <img src="20-Regreso-al-hogar.jpg" alt="20 Regreso al hogar">
+              <img src="20-regreso-al-hogar.jpg" alt="20 Regreso al hogar">
             </div>
             <figcaption>
               <p class="title">20 Regreso al hogar</p>
@@ -391,3 +391,4 @@
   </div>
 </body>
 </html>
+
